usb-moded (0.44) unstable; urgency=low

  * Make disconnect debouncing timeout longer for USB cert Fixes: NB#266884

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Thu, 23 Jun 2011 12:03:58 +0300

usb-moded (0.43) unstable; urgency=low

  * Tweak disconnect debouncing and make sure we do not execute the disconnect 
    handler when we are connected. Fixes: NB#266157

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Thu, 16 Jun 2011 14:43:37 +0300

usb-moded (0.42) unstable; urgency=low
  
  * Debounce trigger events
  * Only send disconnect signal when we were previously connected
  * Make mass storage blocking more verbose
  * Retry more before giving up the eMMC unmount. Fixes: NB#258488

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Wed, 08 Jun 2011 14:23:01 +0300

usb-moded (0.41) unstable; urgency=low
 
  * Fix forgotten case for devicelock/trigger. Fixes: NB#261558
  * Small memory leak fix for the gconf handler

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Fri, 03 Jun 2011 13:53:58 +0300

usb-moded (0.40) unstable; urgency=low

  * check devicelock export permission in trigger. Fixes: NB#261558

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Tue, 31 May 2011 14:43:00 +0300

usb-moded (0.39) unstable; urgency=low

  * Add disconnect unbouncing timeout
  * Ask mode is also a valid mode value for setting the settings.
  * More aegis insanity. Fixes: NB#254713

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Wed, 18 May 2011 20:04:12 +0300

usb-moded (0.38) unstable; urgency=low
  
  * Fix lintian warning
  * Fix doxygen warnings and improve documentation
  * Add dynamic mode support
  * Add debug printing for finding who keeps the mass-storage device busy
  * Add more aegis capabilities.
  * Remove dependency on glib 2.28.0, glib 2.24.2 is enough now.
  * Fix fallback mount options. Fixes: NB#255798

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Mon, 16 May 2011 13:06:17 +0300

usb-moded (0.37) unstable; urgency=low
  